feat: update window bar and icons and improve start tracking button logic

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' ws: wss: http://127.0.0.1:8700 http://localhost:8700;"
     />
-    <title>SURI</title>
+    <title>Suri - AI Attendance Tracker</title>
   </head>
   <body>
     <div id="root"></div>
